--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,13 @@
 .idea/**/uiDesigner.xml
 .idea/**/dbnavigator.xml
 
+pom.xml.tag
+pom.xml.releaseBackup
+pom.xml.versionsBackup
+pom.xml.next
+release.properties
+dependency-reduced-pom.xml
+
 *.iml
 /target
 
