added MySQL client crud/executor

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -9,7 +9,7 @@
       tcpFastOpen: true
       tcpNoDelay: true
 
-      preferNativeTransport: true
+      preferNativeTransport: false
     }
 
     ws {
@@ -51,6 +51,15 @@
     database: clients
     host: localhost
     port: 3306
+
+    cred {
+      username: mysqluser
+      password: password_123
+    }
+
+    pool {
+      maxPoolSize: 64
+    }
   }
 
 }
