--- a/pom.xml
+++ b/pom.xml
@@ -12,14 +12,16 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
-        <vertx.version>3.5.4</vertx.version>
+        <vertx.version>3.6.3</vertx.version>
         <vertx-pg-client.version>0.3.0</vertx-pg-client.version>
         <reactive-pg-client.version>0.11.3</reactive-pg-client.version>
         <postgres.version>42.2.5</postgres.version>
-        <netty.version>4.1.29.Final</netty.version>
+        <netty.version>4.1.35.Final</netty.version>
         <typesafe-config.version>1.3.3</typesafe-config.version>
         <jackson.version>2.9.7</jackson.version>
+        <guice.version>4.2.1</guice.version>
         <lombok.version>1.18.6</lombok.version>
+        <slf4j.version>1.7.25</slf4j.version>
     </properties>
 
     <dependencies>
@@ -49,6 +51,18 @@
         </dependency>
 
         <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-mysql-postgresql-client</artifactId>
+            <version>${vertx.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-sql-common</artifactId>
+            <version>${vertx.version}</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.reactiverse</groupId>
             <artifactId>reactive-pg-client</artifactId>
             <version>${reactive-pg-client.version}</version>
@@ -75,7 +89,7 @@
         <dependency>
             <groupId>com.google.inject</groupId>
             <artifactId>guice</artifactId>
-            <version>4.2.1</version>
+            <version>${guice.version}</version>
         </dependency>
 
         <dependency>
@@ -85,10 +99,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.jetbrains</groupId>
-            <artifactId>annotations</artifactId>
-            <version>15.0</version>
-            <scope>compile</scope>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-log4j12</artifactId>
+            <version>${slf4j.version}</version>
         </dependency>
 
     </dependencies>
