little fix: native transport param at config

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -9,7 +9,7 @@
       tcpFastOpen: true
       tcpNoDelay: true
 
-      preferNativeTransport: false
+      preferNativeTransport: true
     }
 
     ws {
