final cut with README.md

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -25,6 +25,10 @@
         info: "Available methods: findOrCreate, addNew, remove, updateClient"
       }
     }
+
+    crud {
+      description: pg
+    }
   }
 
   pg {
@@ -32,7 +36,7 @@
     host: localhost
     port: 5432
 
-    cred {
+    crud {
       username: pguser
       password: password_123
     }
@@ -52,7 +56,7 @@
     host: localhost
     port: 3306
 
-    cred {
+    crud {
       username: mysqluser
       password: password_123
     }
