final cut (with little fix) with README.md

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -22,7 +22,7 @@
       preferNativeTransport: true
 
       api {
-        info: "Available methods: findOrCreate, addNew, remove, updateClient"
+        info: "Available methods: findClient, createClient, removeClient, updateClient"
       }
     }
 
